# WireGuardian

./: .gitignore  Makefile  README.md  pyproject.toml  wg-client  wg-server
client/: main.py
server/: api.py  config.py  db.py  main.py  wireguard.py
