[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireguardian"
version = "0.1.0"
description = "Client-server WireGuard VPN peer configuration manager"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
server = ["flask>=2.3", "cryptography>=41.0"]
client = ["requests>=2.28"]

[project.scripts]
wg-server = "server.main:cli"
wg-client = "client.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "client*"]
